使用者端-待領養動物名單更新

--- a/views/donate.ejs
+++ b/views/donate.ejs
@@ -12,7 +12,7 @@ shrink-to-fit=no"
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="css/detail.css" />
     <link rel="manifest" href="manifest.json">
-    <title>產品細節</title>
+    <title>領養動物</title>
   </head>
 
   <body>
@@ -46,11 +46,11 @@ shrink-to-fit=no"
           </div>
         </div>
       </nav>
-    </header>
+   </header>
     <div id="banner"></div>
     <div class="container my-3">
       <div class="row g-0">
-        <h3 class="title my-3">| 實驗動物資訊<small>Detail</small></h3>
+   <!--      <h3 class="title my-3">| 實驗動物資訊<small>Detail</small></h3>
       </div>
       <div class="row">
         <div class="col-lg mb-3">
@@ -61,10 +61,10 @@ shrink-to-fit=no"
           <p>
             虎年到來，這片土地上的你我牠都需要一個和諧的環境，即日起只要單筆捐款NT1,200以上，或定期定額NT300連續6期以上，即可索取動物友善紀念馬克杯乙個。您的捐款用於本會認養實驗動物所需用品，幫助實驗動物的未來好好生活；或者支持本會動物議題傳播與福利推廣，讓邦妮幫你持續走在動保的上。<br> 索取方式：請在下方填寫您的聯絡資訊
 
-          </p>
+          </p>-->
            <!-- 資訊：<span class="badge bg-danger me-2">母</span
             ><span class="badge bg-warning me-2">紐西蘭大白兔</span>-->
-          </p>
+       <!--   </p>
           <form class="row align-items-end">
             <div class="col-9">
               <label for="inlineFormInputNum">聯絡資訊(手機與姓名)：</label>
@@ -77,8 +77,157 @@ shrink-to-fit=no"
             </div>
           </form>
         </div>
+      </div>-->
+  <!--  </div>
+
+  </header>
+  <div class="container my-3">
+    <div class="row g-0">
+      <h3 class="title my-3">| 實驗動物資訊<small>Detail</small></h3>
+    </div>
+    <div class="row">
+      <div class="col-lg mb-3">
+        <img src="images/bag.jpg" class="img-thumbnail" />
+      </div>
+      <div class="col-lg mb-3">
+        <h3>捐款滿額送邦妮幫你環保手提袋！</h3>
+        <p>
+          虎年到來，這片土地上的你我牠都需要一個和諧的環境，即日起只要單筆捐款NT1,200以上，或定期定額NT300連續6期以上，即可索取動物友善紀念馬克杯乙個。您的捐款用於本會認養實驗動物所需用品，幫助實驗動物的未來好好生活；或者支持本會動物議題傳播與福利推廣，讓邦妮幫你持續走在動保的上。<br> 索取方式：請在下方填寫您的聯絡資訊
+
+        </p>-->
+         <!-- 資訊：<span class="badge bg-danger me-2">母</span
+          ><span class="badge bg-warning me-2">紐西蘭大白兔</span>-->
+     <!--   </p>
+        <form class="row align-items-end">
+          <div class="col-9">
+            <label for="inlineFormInputNum">聯絡資訊(手機與姓名)：</label>
+            <div class="input-group">
+              <input type="text" class="form-control" id="inlineFormInputNum">
+            </div>
+          </div>
+          <div class="col-3">
+            <button type="submit" class="btn btn-primary">送出</button>
+          </div>
+        </form>
       </div>
     </div>
+  </div>-->
+
+
+<!--xxxxxxxxxxxxxxxxxxxxxxxx-->
+
+</header>
+<div class="container my-3">
+  <div class="row g-0">
+    <h3 class="title my-3">| 瑪莉<small> </small></h3>
+  </div>
+  <div class="row">
+    <div class="col-lg mb-3">
+      <img src="images/瑪莉.jpg" class="img-thumbnail" />
+    </div>
+    <div class="col-lg mb-3">
+      <h3>動物編號：01</h3>
+      <p>發佈日期：2022/07/21<p>
+            <p>性別：母<p>
+              <p>品種：寵物兔<p>
+                <p>大小：中型<p>
+                  <p>生日：不明<p>
+                  <p>故事內容：在士林區劍南路發現的流浪兔，取名：瑪莉<p>
+       <!-- 資訊：<span class="badge bg-danger me-2">母</span
+        ><span class="badge bg-warning me-2">紐西蘭大白兔</span>-->
+      </p>
+      <form class="row align-items-end">
+        <div class="col-9">
+          <label for="inlineFormInputNum">想登記領養者，請留下聯絡資訊(手機與姓名)：</label>
+          <div class="input-group">
+            <input type="text" class="form-control" id="inlineFormInputNum">
+          </div>
+        </div>
+        <div class="col-3">
+          <button type="submit" class="btn btn-primary">送出</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+<!--xxxxxxxxxxxxxxxxxxxxxxxx-->
+
+<!--xxxxxxxxxxxxxxxxxxxxxxxx-->
+
+</header>
+<div class="container my-3">
+  <div class="row g-0">
+    <h3 class="title my-3">| 小虎<small> </small></h3>
+  </div>
+  <div class="row">
+    <div class="col-lg mb-3">
+      <img src="images/01.jpg" class="img-thumbnail" />
+    </div>
+    <div class="col-lg mb-3">
+      <h3>動物編號：02</h3>
+      <p>發佈日期：2022/10/06<p>
+            <p>性別：母<p>
+              <p>品種：寵物兔<p>
+                <p>大小：中型<p>
+                  <p>生日：不明<p>
+                  <p>故事內容：在桃園鳳凰山福德宮附近發現的流浪兔，取名：小虎<p>
+       <!-- 資訊：<span class="badge bg-danger me-2">母</span
+        ><span class="badge bg-warning me-2">紐西蘭大白兔</span>-->
+      </p>
+      <form class="row align-items-end">
+        <div class="col-9">
+          <label for="inlineFormInputNum">想登記領養者，請留下聯絡資訊(手機與姓名)：</label>
+          <div class="input-group">
+            <input type="text" class="form-control" id="inlineFormInputNum">
+          </div>
+        </div>
+        <div class="col-3">
+          <button type="submit" class="btn btn-primary">送出</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+<!--xxxxxxxxxxxxxxxxxxxxxxxx-->
+
+<!--xxxxxxxxxxxxxxxxxxxxxxxx-->
+
+</header>
+<div class="container my-3">
+  <div class="row g-0">
+    <h3 class="title my-3">| 黑桃<small> </small></h3>
+  </div>
+  <div class="row">
+    <div class="col-lg mb-3">
+      <img src="images/黑桃.jpg" class="img-thumbnail" />
+    </div>
+    <div class="col-lg mb-3">
+      <h3>動物編號：03</h3>
+      <p>發佈日期：2022/07/16<p>
+            <p>性別：公<p>
+              <p>品種：寵物兔<p>
+                <p>大小：小型<p>
+                  <p>生日：不明<p>
+                  <p>在桃園市桃園區陽明運動公園發現的流浪兔，取名：黑桃<p>
+       <!-- 資訊：<span class="badge bg-danger me-2">母</span
+        ><span class="badge bg-warning me-2">紐西蘭大白兔</span>-->
+      </p>
+      <form class="row align-items-end">
+        <div class="col-9">
+          <label for="inlineFormInputNum">想登記領養者，請留下聯絡資訊(手機與姓名)：</label>
+          <div class="input-group">
+            <input type="text" class="form-control" id="inlineFormInputNum">
+          </div>
+        </div>
+        <div class="col-3">
+          <button type="submit" class="btn btn-primary">送出</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+<!--xxxxxxxxxxxxxxxxxxxxxxxx-->
+
     <footer class="text-center bg-dark text-white py-2">
       © 2021 All Rights Reserved.
     </footer> 
