--- a/views/product.ejs
+++ b/views/product.ejs
@@ -71,16 +71,16 @@
           <div class="card">
             <img
               class="card-img-top"
-              src="images/sponsor.jpg"
+              src="images/等待領養名單.jpg"
               alt="Card image cap"
             />
             <div class="card-body">
-              <h5 class="card-title text-danger">捐款資訊</h5>
+              <h5 class="card-title text-danger">查看待領養動物名單</h5>
               <p class="card-text">
-                郵局劃撥帳號：123456789
+                
               </p>
               <a href="donate" class="btn btn-outline-primary float-end">
-                線上立刻捐款支持</a
+                立即查看</a
               >
            <!--- </div>
           </div>
