--- a/views/recognitionCheck.ejs
+++ b/views/recognitionCheck.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="css/recognition.css" />
     <link rel="manifest" href="manifest.json">
-    <title>圖像辨識結果</title>
+    <title>圖像辨識</title>
   </head>
 
   <header>
@@ -72,42 +72,9 @@
     <!--主按鈕-->
     <div class="row g-0 text-light justify-content-center align-items-center">
       <div class="col-lg-6 text-center">
-        <div class="profile-content">
-            <% if (item.peta == true) { %>
-              <h2 class="profile-title">辨識結果為：</h2>
-              <h3 class="profile-title"><%= item.b_name %></h3>
-              <br>
-              <h2 class="profile-title">認證標章為（點擊標章可以直接跳至該標章的所有品牌頁面）：</h2>
-              <h3 class="profile-description">BEAUTY WITHOUT BUNNIES PROGRAM</h3>
-              <a href="peta" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-              <span class="date">名單更新日期：<%= item.updatetime %></span>
-              <br>
-              <a class="btn btn-outline-light" href="/" role="button">回主頁</a>
-            <% }else if (item.leapingbunny == true) { %>
-              <h2 class="profile-title">辨識結果為：</h2>
-              <h3 class="profile-title"><%= item.b_name %></h3>
-              <br>
-              <h2 class="profile-title">認證標章為（點擊標章可以直接跳至該標章的所有品牌頁面）：</h2>
-              <h3 class="profile-description">LEAPING BUNNY CERTIFICATION</h3>
-              <a href="leapingbunny" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-              <span class="date">名單更新日期：<%= item.updatetime %></span>
-              <br>
-              <a class="btn btn-outline-light" href="/" role="button">回主頁</a>
-            <% } else if (item.nmcb == true) { %>
-              <h2 class="profile-title">辨識結果為：</h2>
-              <h3 class="profile-title"><%= item.b_name %></h3>
-              <br>
-              <h2 class="profile-title">認證標章為（點擊標章可以直接跳至該標章的所有品牌頁面）：</h2>
-              <h3 class="profile-description">兔兔不哭</h3>
-              <a href="nmcb" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-              <span class="date">名單更新日期：<%= item.updatetime %></span>
-              <br>
-              <a class="btn btn-outline-light" href="/" role="button">回主頁</a>
-            <% } else { %>
-              <h3 class="profile-description">無辨識結果，請提供圖片</h3>
-              <a class="btn btn-outline-light" href="/recognition" role="button">去上傳</a>
-            <% } %>
-        </div>
+        <form action="/recognitionAns" enctype="multipart/form-data" method="get" name="form">
+          <input type="submit" value="上傳完成，查看結果">
+        </form>
     <!--<ul class="drop-down-menu">
       <li><a href="#">開始上傳</a> 
           <ul>
