--- a/views/animalcheck.ejs
+++ b/views/animalcheck.ejs
@@ -11,6 +11,7 @@
     <!-- Base Styling  -->
     <link rel="stylesheet" href="assets/main/css/fonts.css">
     <link rel="stylesheet" href="assets/main/css/style.css">
+    <link rel="stylesheet"  href="css/animalcheck.css">
 </head>
 
 <body>
@@ -353,40 +354,45 @@
                                                     <div class="col-xl-4">
                                                         <div class="form-group row widget-3">
                                                             <div class="col-lg-10">
-                                                                <div class="form-input" style="cursor:default;">
-                                                                    <!---<label class="labeltest" for="file-ip-1">
+                                                                <div class="profile-image">
+                                                                        <img  alt="img" src=<%=item.an_pic %>> 
+                                                                </div>
+                                                                
+                                                                  <!---<div class="form-input" style="cursor:default;">
+                                                                  <label class="labeltest" for="file-ip-1">
                                                                         <span> Drop image here or click to upload.
                                                                         </span>
                                                                     </label>
-                                                                    <input type="file" name="an_pic" id="file-ip-1" accept="image/*" onchange="showPreview(event)" readonly>--->
-                                                                    <div class="preview">
-                                                                        <img id="file-ip-1-preview"  alt="img" src=<%=item.an_pic %>>
-                                                                    </div>
-                                                                </div>
+                                                                    <input type="file" name="an_pic" id="file-ip-1" accept="image/*" onchange="showPreview(event)" readonly>
+                                                                </div>--->
                                                             </div>
                                                         </div>
                                                     </div>
                                                     <div class="col-xl-4">
                                                         <div class="form-group">
+                                                            <span>動物名字:</span>
                                                             <input type="text" name="an_name" class="form-control" style="cursor:default;"
                                                                 placeholder="動物名字" readonly value=<%=item.an_name %>>
                                                         </div>
                                                         <div class="form-group">
+                                                            <span>動物品種:</span>
                                                             <input type="text" name="an_variety"  class="form-control" style="cursor:default;"
                                                                 placeholder="動物品種" readonly value=<%=item.an_variety %>>
                                                         </div>
                                                         <div class="form-group">
+                                                            <span>生日:</span>
                                                             <input type="text" name="an_birth"  class="form-control" style="cursor:default;"
                                                                 placeholder="生日" readonly  value=<%=item.an_birth %> >
                                                         </div>
                                                     </div>
                                                     <div class="col-xl-4">
-
                                                         <div class="form-group">
+                                                            <span>尺寸:</span>
                                                             <input type="text" name="an_size" class="form-control" style="cursor:default;"
                                                                 placeholder="尺寸" readonly value=<%=item.an_size %>>
                                                         </div>
                                                         <div class="form-group">
+                                                            <span>性別:</span>
                                                             <input type="text" name="an_sex" class="form-control" style="cursor:default;"
                                                                 placeholder="性別" readonly value=<%=item.an_sex %>>
                                                             <!---<select name="an_sex" class="form-control form-select" style="cursor:default;" readonly>
@@ -396,6 +402,7 @@
                                                             </select>--->
                                                         </div>
                                                         <div class="form-group">
+                                                            <span>發布日期:</span>
                                                             <input type="text" name="an_postdate"  class="form-control" style="cursor:default;"
                                                                 placeholder="發布日期" readonly  value=<%=item.an_postdate %> >
                                                         </div>
@@ -423,10 +430,11 @@
                                                     </div>
                                                     <div class="col-xl-8">
                                                         <div class="form-group">
+                                                            <span>故事內容:</span>
                                                             <textarea class="form-control" name="an_depiction" style="cursor:default;"
                                                                 placeholder="故事內容:" rows="4" readonly><%=item.an_depiction %></textarea>
                                                         </div>
-                                                        <!---<div class="form-group text-right">
+                                                     <!---   <div class="form-group text-right">
                                                             <button type="submit" onclick="return confirmAdd()"
                                                                 class="btn btn-primary float-end">修改</button>
                                                         </div>--->
