--- a/views/addanimal.ejs
+++ b/views/addanimal.ejs
@@ -384,7 +384,7 @@
 
                                                         <div class="form-group">
                                                             <input type="text" name="an_size" class="form-control"
-                                                                placeholder="尺寸" required>
+                                                                placeholder="體重" required>
                                                         </div>
                                                         <div class="form-group">
                                                             <select name="an_sex" class="form-control form-select" required>
