動物清單查更刪按鈕+大標修改

--- a/views/animaledit.ejs
+++ b/views/animaledit.ejs
@@ -335,7 +335,7 @@
                         <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="empindex">Home</a></li>
-                                <li class="breadcrumb-item active"><a href="addanimal">修改動物</a></li>
+                                <li class="breadcrumb-item active"><a href="addanimal">更新動物</a></li>
                             </ol>
                         </div>
                     </div>
@@ -424,7 +424,7 @@
                                                                 placeholder="故事內容:" rows="4" required><%=item.an_depiction %></textarea>
                                                         </div>
                                                         <div class="form-group text-right">
-                                                            <button type="submit" class="btn btn-primary float-end">修改</button>
+                                                            <button type="submit" class="btn btn-primary float-end">更新</button>
                                                         </div>
                                                     </div>
                                                 </div>
