--- a/views/animallist.ejs
+++ b/views/animallist.ejs
@@ -342,27 +342,12 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-12">
-                            <div class="card shadow">
-                                <div class="card-header">
-                                    <div class="row m-rl w-100">
-                                        <div class="col-lg-3 col-sm-12">
-                                            <div class="form-group">
-                                                <a class="btn" href="animalcheckno" value="查詢" role="button"></a>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-3 col-sm-12">
-                                            <div class="form-group">
-                                                <a class="btn" href="animalupdateno" value="查詢" role="button"></a>
-                                            </div>
-                                        </div>
-                                        <div class="col-lg-3 col-sm-12">
-                                            <div class="form-group">
-                                                <a class="btn" href="animaldelno" value="查詢" role="button"></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                            <div class="form-group" style="text-align: right;">
+                                <input type="button" style="width:80px;height:40px;border:none;background-color:rgb(239, 222, 135);border-radius: 3px;" onclick="location.href='animalcheckno'" value="查詢">
+                                <input type="button" style="width:80px;height:40px;border:none;background-color:pink;border-radius: 3px;" onclick="location.href='animalupdateno'" value="更新">
+                                <input type="button" style="width:80px;height:40px;border:none;background-color:rgb(246, 105, 105);border-radius: 3px;" onclick="location.href='animaldelno'" value="刪除">
                             </div>
+                            
                         </div>
                     </div>
                     <div class="row">
