--- a/views/animalupdateno.ejs
+++ b/views/animalupdateno.ejs
@@ -329,13 +329,13 @@
                     <div class="row page-titles mx-0">
                         <div class="col-sm-6 p-md-0">
                             <div class="welcome-text">
-                                <h4 class="text-primary">查看動物</h4>
+                                <h4 class="text-primary">更新動物</h4>
                             </div>
                         </div>
                         <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="empindex">Home</a></li>
-                                <li class="breadcrumb-item active"><a href="addanimal">查看動物</a></li>
+                                <li class="breadcrumb-item active"><a href="addanimal">更新動物</a></li>
                             </ol>
                         </div>
                     </div>
