--- a/views/recognitionCheck.ejs
+++ b/views/recognitionCheck.ejs
@@ -41,7 +41,7 @@
             <a class="nav-link" href="about">關於我們</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="detail">實驗動物認養</a>
+            <a class="nav-link" href="product">實驗動物認養</a>
           </li>
         </ul>
       </div>
