--- a/views/register.ejs
+++ b/views/register.ejs
@@ -47,7 +47,7 @@ shrink-to-fit=no"
               <a class="nav-link" href="about">關於我們</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="product">介紹</a>
+              <a class="nav-link" href="product">實驗動物認養</a>
             </li>
           </ul>
         </div>
