--- a/views/donate.ejs
+++ b/views/donate.ejs
@@ -115,118 +115,34 @@ shrink-to-fit=no"
 
 
 <!--xxxxxxxxxxxxxxxxxxxxxxxx-->
-
+<% for(var i=0; i<items.length; i++) {%>
 </header>
 <div class="container my-3">
   <div class="row g-0">
-    <h3 class="title my-3">| 瑪莉<small> </small></h3>
+    <h3 class="title my-3">| 動物編號：<%= items[i].an_id %><small> </small></h3>
   </div>
   <div class="row">
     <div class="col-lg mb-3">
-      <img src="images/瑪莉.jpg" class="img-thumbnail" />
+      <img src=<%= items[i].an_pic %> class="img-thumbnail" />
     </div>
     <div class="col-lg mb-3">
-      <h3>動物編號：01</h3>
-      <p>發佈日期：2022/07/21<p>
-            <p>性別：母<p>
-              <p>品種：寵物兔<p>
-                <p>大小：中型<p>
-                  <p>生日：不明<p>
-                  <p>故事內容：在士林區劍南路發現的流浪兔，取名：瑪莉<p>
+      <h3><%= items[i].an_name %></h3>
+      <p>發佈日期：<%= items[i].an_postdate %><p>
+            <p>性別：<%= items[i].an_sex %><p>
+              <p>品種：<%= items[i].an_variety %><p>
+                <p>體重：<%= items[i].an_size %><p>
+                  <p>生日：<%= items[i].an_birth %><p>
+                  <p>故事內容：<%= items[i].an_depiction %><p>
        <!-- 資訊：<span class="badge bg-danger me-2">母</span
         ><span class="badge bg-warning me-2">紐西蘭大白兔</span>-->
       </p>
-      <form class="row align-items-end">
-        <div class="col-9">
-          <label for="inlineFormInputNum">想登記領養者，請留下聯絡資訊(手機與姓名)：</label>
-          <div class="input-group">
-            <input type="text" class="form-control" id="inlineFormInputNum">
-          </div>
-        </div>
-        <div class="col-3">
-          <button type="submit" class="btn btn-primary">送出</button>
-        </div>
-      </form>
     </div>
   </div>
 </div>
+<% } %>
 <!--xxxxxxxxxxxxxxxxxxxxxxxx-->
 
-<!--xxxxxxxxxxxxxxxxxxxxxxxx-->
 
-</header>
-<div class="container my-3">
-  <div class="row g-0">
-    <h3 class="title my-3">| 小虎<small> </small></h3>
-  </div>
-  <div class="row">
-    <div class="col-lg mb-3">
-      <img src="images/01.jpg" class="img-thumbnail" />
-    </div>
-    <div class="col-lg mb-3">
-      <h3>動物編號：02</h3>
-      <p>發佈日期：2022/10/06<p>
-            <p>性別：母<p>
-              <p>品種：寵物兔<p>
-                <p>大小：中型<p>
-                  <p>生日：不明<p>
-                  <p>故事內容：在桃園鳳凰山福德宮附近發現的流浪兔，取名：小虎<p>
-       <!-- 資訊：<span class="badge bg-danger me-2">母</span
-        ><span class="badge bg-warning me-2">紐西蘭大白兔</span>-->
-      </p>
-      <form class="row align-items-end">
-        <div class="col-9">
-          <label for="inlineFormInputNum">想登記領養者，請留下聯絡資訊(手機與姓名)：</label>
-          <div class="input-group">
-            <input type="text" class="form-control" id="inlineFormInputNum">
-          </div>
-        </div>
-        <div class="col-3">
-          <button type="submit" class="btn btn-primary">送出</button>
-        </div>
-      </form>
-    </div>
-  </div>
-</div>
-<!--xxxxxxxxxxxxxxxxxxxxxxxx-->
-
-<!--xxxxxxxxxxxxxxxxxxxxxxxx-->
-
-</header>
-<div class="container my-3">
-  <div class="row g-0">
-    <h3 class="title my-3">| 黑桃<small> </small></h3>
-  </div>
-  <div class="row">
-    <div class="col-lg mb-3">
-      <img src="images/黑桃.jpg" class="img-thumbnail" />
-    </div>
-    <div class="col-lg mb-3">
-      <h3>動物編號：03</h3>
-      <p>發佈日期：2022/07/16<p>
-            <p>性別：公<p>
-              <p>品種：寵物兔<p>
-                <p>大小：小型<p>
-                  <p>生日：不明<p>
-                  <p>在桃園市桃園區陽明運動公園發現的流浪兔，取名：黑桃<p>
-       <!-- 資訊：<span class="badge bg-danger me-2">母</span
-        ><span class="badge bg-warning me-2">紐西蘭大白兔</span>-->
-      </p>
-      <form class="row align-items-end">
-        <div class="col-9">
-          <label for="inlineFormInputNum">想登記領養者，請留下聯絡資訊(手機與姓名)：</label>
-          <div class="input-group">
-            <input type="text" class="form-control" id="inlineFormInputNum">
-          </div>
-        </div>
-        <div class="col-3">
-          <button type="submit" class="btn btn-primary">送出</button>
-        </div>
-      </form>
-    </div>
-  </div>
-</div>
-<!--xxxxxxxxxxxxxxxxxxxxxxxx-->
 
     <footer class="text-center bg-dark text-white py-2">
       © 2021 All Rights Reserved.
