--- a/views/animalcheck.ejs
+++ b/views/animalcheck.ejs
@@ -387,9 +387,9 @@
                                                     </div>
                                                     <div class="col-xl-4">
                                                         <div class="form-group">
-                                                            <span>尺寸:</span>
+                                                            <span>體重:</span>
                                                             <input type="text" name="an_size" class="form-control" style="cursor:default;"
-                                                                placeholder="尺寸" readonly value=<%=item.an_size %>>
+                                                                placeholder="體重" readonly value=<%=item.an_size %>>
                                                         </div>
                                                         <div class="form-group">
                                                             <span>性別:</span>
