--- a/views/addanimal.ejs
+++ b/views/addanimal.ejs
@@ -368,14 +368,17 @@
                                                     </div>
                                                     <div class="col-xl-4">
                                                         <div class="form-group">
+                                                            <span>動物名字:</span>
                                                             <input type="text" name="an_name" class="form-control"
                                                                 placeholder="動物名字" required>
                                                         </div>
                                                         <div class="form-group">
+                                                            <span>動物品種:</span>
                                                             <input type="text" name="an_variety" class="form-control"
                                                                 placeholder="動物品種" required>
                                                         </div>
                                                         <div class="form-group">
+                                                            <span>生日:</span>
                                                             <input type="date" name="an_birth" class="form-control"
                                                                 placeholder="生日" required>
                                                         </div>
@@ -383,10 +386,12 @@
                                                     <div class="col-xl-4">
 
                                                         <div class="form-group">
+                                                            <span>體重:</span>
                                                             <input type="text" name="an_size" class="form-control"
                                                                 placeholder="體重" required>
                                                         </div>
                                                         <div class="form-group">
+                                                            <span>性別:</span>
                                                             <select name="an_sex" class="form-control form-select" required>
                                                                 <option value="性別" hidden></option>
                                                                 <option>母</option>
@@ -417,6 +422,7 @@
                                                     </div>
                                                     <div class="col-xl-8">
                                                         <div class="form-group">
+                                                            <span>故事內容:</span>
                                                             <textarea class="form-control" name="an_depiction"
                                                                 placeholder="故事內容:" rows="4" required></textarea>
                                                         </div>
