--- a/views/animaledit.ejs
+++ b/views/animaledit.ejs
@@ -329,7 +329,7 @@
                     <div class="row page-titles mx-0">
                         <div class="col-sm-6 p-md-0">
                             <div class="welcome-text">
-                                <h4 class="text-primary">修改動物</h4>
+                                <h4 class="text-primary">更新動物</h4>
                             </div>
                         </div>
                         <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
@@ -368,24 +368,29 @@
                                                     </div>
                                                     <div class="col-xl-4">
                                                         <div class="form-group">
+                                                            <span>動物名字:</span>
                                                             <input type="text" name="an_name" class="form-control"
                                                                 placeholder="動物名字" required value=<%=item.an_name %>>
                                                         </div>
                                                         <div class="form-group">
+                                                            <span>動物品種:</span>
                                                             <input type="text" name="an_variety"  class="form-control"
                                                                 placeholder="動物品種" required value=<%=item.an_variety %>>
                                                         </div>
                                                         <div class="form-group">
+                                                            <span>生日:</span>
                                                             <input type="date" name="an_birth"  class="form-control" value=<%=item.an_birth %> >
                                                         </div>
                                                     </div>
                                                     <div class="col-xl-4">
 
                                                         <div class="form-group">
+                                                            <span>體重:</span>
                                                             <input type="text" name="an_size" class="form-control"
-                                                                placeholder="尺寸" required value=<%=item.an_size %>>
+                                                                placeholder="體重" required value=<%=item.an_size %>>
                                                         </div>
                                                         <div class="form-group">
+                                                            <span>性別:</span>
                                                             <select name="an_sex" class="form-control form-select" required>
                                                                 <option value="性別" hidden></option>
                                                                 <option>母</option>
@@ -393,6 +398,7 @@
                                                             </select>
                                                         </div>
                                                         <div class="form-group" hidden>
+                                                            <span>編號:</span>
                                                             <input type="text" name="an_id" class="form-control"
                                                                 placeholder="編號" hidden value=<%=item.an_id %>>
                                                         </div>
@@ -420,6 +426,7 @@
                                                     </div>
                                                     <div class="col-xl-8">
                                                         <div class="form-group">
+                                                            <span>故事內容:</span>
                                                             <textarea class="form-control" name="an_depiction"
                                                                 placeholder="故事內容:" rows="4" required><%=item.an_depiction %></textarea>
                                                         </div>
