--- a/views/animallist.ejs
+++ b/views/animallist.ejs
@@ -361,10 +361,9 @@
                                                     <img alt="image" src=<%=items[i].an_pic %>>
                                                 </div>
                                                 <div class="media-body">
-                                                    <a href="#">
-                                                        <h4 class="mb-2">
-                                                            <%= items[i].an_name %>
-                                                        </h4>
+                                                        <p class="mb-2" style="font-weight:bold;">
+                                                            編號:<%= items[i].an_id %> </br>名字:<%= items[i].an_name %>
+                                                        </p>
                                                     </a>
                                                     <p class="mb-2">
                                                         <%= items[i].an_variety %>
@@ -375,33 +374,12 @@
                                                         </p>
                                                     </div>
                                                 </div>
-                                                <div class="btn-group-style-1">
-                                                    <div class="btn-content">
-                                                        <button type="button" class="btn btn-secondary dropdown-toggle"
-                                                            data-bs-toggle="dropdown" aria-haspopup="true"
-                                                            aria-expanded="false">
-                                                            <i class="fas fa-ellipsis-v"></i>
-                                                        </button>
-                                                        <div class="dropdown-menu">
-                                                            <div class="form-content">
-                                                                <a href="animalcheckno">
-                                                                    <span class="ml-2">查看檔案</span>
-                                                                </a>
-                                                                <a href="animaledit">
-                                                                    <span class="ml-2">修改</span>
-                                                                </a>
-                                                                <a href="#">
-                                                                    <span class="ml-2">刪除</span>
-                                                                </a>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
+                                            
                                             </div>
                                         </div>
                                         <% } %>
 
-                                            <div class="col-sm-6 col-lg-4">
+                                            <!---<div class="col-sm-6 col-lg-4">
                                                 <div class="timeline-panel card p-4 mb-4">
                                                     <div class="media">
                                                         <img alt="image"
@@ -444,7 +422,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                            </div>
+                                            </div>--->
                                 </div>
                             </div>
                         </div>
