試著修改圖片大小

--- a/views/recognitionAns.ejs
+++ b/views/recognitionAns.ejs
@@ -79,7 +79,7 @@
               <br>
               <h2 class="profile-title">認證標章為（點擊標章可以直接跳至該標章的所有品牌頁面）：</h2>
               <h3 class="profile-description">BEAUTY WITHOUT BUNNIES PROGRAM</h3>
-              <a href="peta" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+              <a href="peta" class="image fit"><img src="images/pic04.jpg" width="20%" height="20%" alt="" /></a>
               <span class="date">名單更新日期：<%= item.updatetime %></span>
               <br>
               <a class="btn btn-outline-light" href="/" role="button">回主頁</a>
@@ -89,7 +89,7 @@
               <br>
               <h2 class="profile-title">認證標章為（點擊標章可以直接跳至該標章的所有品牌頁面）：</h2>
               <h3 class="profile-description">LEAPING BUNNY CERTIFICATION</h3>
-              <a href="leapingbunny" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+              <a href="leapingbunny" class="image fit"><img src="images/pic02.jpg" width="20%" height="20%" alt="" /></a>
               <span class="date">名單更新日期：<%= item.updatetime %></span>
               <br>
               <a class="btn btn-outline-light" href="/" role="button">回主頁</a>
@@ -99,7 +99,7 @@
               <br>
               <h2 class="profile-title">認證標章為（點擊標章可以直接跳至該標章的所有品牌頁面）：</h2>
               <h3 class="profile-description">兔兔不哭</h3>
-              <a href="nmcb" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+              <a href="nmcb" class="image fit"><img src="images/pic05.jpg" width="20%" height="20%" alt="" /></a>
               <span class="date">名單更新日期：<%= item.updatetime %></span>
               <br>
               <a class="btn btn-outline-light" href="/" role="button">回主頁</a>
