--- a/views/donate.ejs
+++ b/views/donate.ejs
@@ -123,7 +123,9 @@ shrink-to-fit=no"
   </div>
   <div class="row">
     <div class="col-lg mb-3">
-      <img src=<%= items[i].an_pic %> class="img-thumbnail" />
+      <div class="animal-image">
+        <img src=<%= items[i].an_pic %> >
+      </div>
     </div>
     <div class="col-lg mb-3">
       <h3><%= items[i].an_name %></h3>
