標章圖片大小

--- a/views/recognitionAns.ejs
+++ b/views/recognitionAns.ejs
@@ -111,9 +111,11 @@
               <a class="btn btn-outline-light" href="/recognition" role="button">去上傳</a>
               <br><br>
               <p>（點擊標章圖片可以直接跳至該標章的所有品牌頁面）</p>
+              <div class="searchbrand">
               <a href="peta"><img src="images/pic04.jpg" width="20%" height="20%" alt="" /></a>
               <a href="leapingbunny"><img src="images/pic02.jpg" width="20%" height="20%" alt="" /></a>
               <a href="nmcb"><img src="images/pic05.jpg" width="20%" height="20%" alt="" /></a>
+            </div>
             <% } %>
         </div>
     <!--<ul class="drop-down-menu">
