--- a/public/css/recognition.css
+++ b/public/css/recognition.css
@@ -107,3 +107,21 @@ ul.drop-down-menu ul { /*隱藏次選單*/
 ul.drop-down-menu li:hover > ul { /* 滑鼠滑入展開次選單*/
     display: block;
 }
+
+.searchbrand{
+    width: 100%;
+    height: 100%;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+.searchbrand img{
+    width: 100%;
+    padding-left: 20px;
+    position: relative;
+}
