更新動物(顯示圖片)

--- a/views/animalcheck.ejs
+++ b/views/animalcheck.ejs
@@ -360,7 +360,7 @@
                                                     <div class="col-xl-4">
                                                         <div class="form-group row widget-3">
                                                             <div class="col-lg-10">
-                                                                <div class="profile-image">
+                                                                <div class="animal-pic">
                                                                         <img  alt="img" src=<%=item.an_pic %>> 
                                                                 </div>
                                                                 
