--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,8 +28,9 @@
                     </label>
                 </div>-->
                 <div><input type="submit" class="btn" value="登入"></div>
+                <button type="button" class="btn2" onclick="location.href='register'">註冊</button> 
             </div>
-            <button type="button" class="btn" onclick="location.href='register'">註冊</button> 
+            
                 
                    
             </form>
