動物更新圖片修正+會員回報+會員編輯

--- a/views/memberadmin.ejs
+++ b/views/memberadmin.ejs
@@ -409,29 +409,12 @@
                                                         <a class='mr-4 vue' data-bs-toggle="modal" data-bs-target="#exampleModalCenter">
                                                             <span class='fas fa-user' aria-hidden='true'></span>
                                                         </a>
-                                                        <a href="editbackmember" class='edit'>
+                                                        <a href="memberno" class='edit'>
                                                             <span class='fas fa-pencil-alt'></span>
                                                         </a>
                                                     </td> 
                                                     </tr> 
                                                 <% } %> 
-                                                <tr>
-                                                    <td> 張賀程 </td>
-                                                    <td>testbunny01@gmail.com	</td>
-                                                    <td>*********	 </td>
-                                                    <td>尚未登記 </td>
-                                                    <td>1989/12/24</td>
-                                                    <td class="text-start"> <span class="badge btn-danger">男</span>
-                                                    </td>
-                                                    <td>
-                                                        <a class='mr-4 vue' data-bs-toggle="modal" data-bs-target="#exampleModalCenter">
-                                                            <span class='fas fa-user' aria-hidden='true'></span>
-                                                        </a>
-                                                        <a class='edit' data-bs-toggle='modal' data-bs-target='#changeTimeAndDate'>
-                                                            <span class='fas fa-pencil-alt'></span>
-                                                        </a>
-                                                    </td>
-                                                </tr> 
                                             </tbody>
                                         </table>
                                     </div>
