--- a/views/animalcheck.ejs
+++ b/views/animalcheck.ejs
@@ -342,7 +342,7 @@
                         <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="empindex">Home</a></li>
-                                <li class="breadcrumb-item active"><a href="addanimal">查看動物</a></li>
+                                <li class="breadcrumb-item active"><a href="animalcheckno">查看動物</a></li>
                             </ol>
                         </div>
                     </div>
