--- a/views/animaledit.ejs
+++ b/views/animaledit.ejs
@@ -342,11 +342,11 @@
                         <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="empindex">Home</a></li>
-                                <li class="breadcrumb-item active"><a href="addanimal">更新動物</a></li>
+                                <li class="breadcrumb-item active"><a href="animalupdateno">更新動物</a></li>
                             </ol>
                         </div>
                     </div>
-                    <form action="/animalupdate" enctype="multipart/form-data" method="post" onchange="readURL(this)" targetID="changeanpic">
+                    <form action="/animalupdate" enctype="multipart/form-data" method="post">
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="card">
