--- a/views/editbackmember.ejs
+++ b/views/editbackmember.ejs
@@ -340,7 +340,7 @@
                             </ol>
                         </div>
                     </div>
-                    <form action="/newanimal" enctype="multipart/form-data" method="post">
+                    <form action="/backmemberupdate" enctype="multipart/form-data" method="post">
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="card">
@@ -386,7 +386,7 @@
                                                         <div class="form-group">
                                                             <span>信箱:</span>
                                                             <input type="text" name="m_email"  class="form-control"
-                                                                placeholder="信箱" required value=<%=item.m_email %>>
+                                                                placeholder="信箱" readonly value=<%=item.m_email %>>
                                                         </div>
                                                         <div class="form-group">
                                                             <span>密碼:</span>
@@ -398,17 +398,17 @@
                                                         <div class="form-group">
                                                             <span>電話:</span>
                                                             <input type="text" name="m_phone"  class="form-control"
-                                                                placeholder="電話" required  value=<%=item.m_phone %> >
+                                                                placeholder="電話" value=<%=item.m_phone %> >
                                                         </div>
                                                         <div class="form-group">
                                                             <span>生日:</span>
                                                             <input type="text" name="m_birth"  class="form-control"
-                                                                placeholder="生日" required  value=<%=item.m_birth %> >
+                                                                placeholder="生日" value=<%=item.m_birth %> >
                                                         </div>
                                                         <div class="form-group">
                                                             <span>性別:</span>
                                                             <input type="text" name="m_sex"  class="form-control"
-                                                                placeholder="性別" required  value=<%=item.m_sex %> >
+                                                                placeholder="性別" value=<%=item.m_sex %> >
                                                         </div>
                                                     </div>
                                                 </div>
@@ -434,16 +434,9 @@
                                                     </div>
                                                     <div class="col-xl-8">
                                                         <div class="form-group text-right">
-                                                            <button type="submit" onclick="return confirmAdd()"
+                                                            <button type="submit" 
                                                                 class="btn btn-primary float-end">確認編輯</button>
                                                         </div>
-                                                        <script>
-                                                            function confirmAdd(){
-                                                                if(an_name!=null){
-                                                                    alert("編輯成功");
-                                                                }
-                                                            }
-                                                        </script>
                                                     </div>
                                                 </div>
                                             </form>
