logout連結+app.js加入checkAuth+安卓theme color

--- a/views/animalupdateno.ejs
+++ b/views/animalupdateno.ejs
@@ -195,7 +195,7 @@
                                         <div class="account-control">
                                             <a class="login header-profile" href="#" title="Sign in">
                                                 <div class="form-content">
-                                                    <a href="page-login.html">
+                                                    <a href="logout">
                                                         <i class="fas fa-sign-in-alt"></i>
                                                         <span class="ml-2">登出 </span>
                                                     </a>
