--- a/views/editbackmember.ejs
+++ b/views/editbackmember.ejs
@@ -190,7 +190,7 @@
                                             <div class="account-control">
                                                 <a class="login header-profile" href="#" title="Sign in">
                                                     <div class="form-content">
-                                                        <a href="page-login.html">
+                                                        <a href="logout">
                                                             <i class="fas fa-sign-in-alt"></i>
                                                             <span class="ml-2">登出 </span>
                                                         </a>
